# CalorieCounter

./: Cargo.toml  Cargo_bins.toml  make_starter_db.py
fooddb/: Cargo.toml
fooddb/src/: food.rs  lib.rs  meal.rs  nutrition.rs  search.rs
src/: cli.rs  food.rs  lib.rs  main_cli.rs  main_webapp.rs  meal.rs  search.rs  webapp.rs
