[package]
name = "calorie_counter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "webap"
path = "src/webapp.rs"

[dependencies]
fooddb = { path = "fooddb" }
